--- a/file2.html
+++ b/file2.html
@@ -15,8 +15,11 @@
             container
             <div>
                 sub container
+             </div>
                 <span>welcome to HTML5</span>
-            </div>
+           
         </div>
+        <br>
+        <iframe src="table1.html"></iframe> 
     </body>
 </html>
