--- a/forms.html
+++ b/forms.html
@@ -7,8 +7,7 @@
         <form action="table1.html">
             <h2 style="text-align: center;">User Login</h2>
             Username: <input type="text" name="username" placeholder="Enter your name" required>
-            <br>
-            <br>
+            <br><br>
             <label>Password:</label> 
             <input type="password" name="password" placeholder="Enter your password" required>
             <br><br>
@@ -17,6 +16,19 @@
             <label for="male">Male</label>
             <input type="radio" name="gender" id="female">
             <label for="female">Female</label><br><br>
+            <label for="address">Address:</label>
+            <textarea rows="3" cols="30" name="address" id="address"></textarea>
+            <br><br>
+            <label for="city">City:</label>
+            <select name="city" id="city">
+                <option value="chennai">Chennai</option>
+                <option value="Hydrabad">Hydrabad</option>
+                <option value="bengalur">Bengalur</option>
+                <option value="kolkata">Kolkata</option>
+                <option value="delhi">Delhi</option>
+                <option value="mumbai">Mumbai</option>
+                <option value="andrapradesh">Andrapradesh</option>
+            </select><br><br>
             <label>Sports:</label>
             <input type="checkbox" name="sports" id="cricket">
             <label for="cricket">Cricket</label>
