--- a/ABC-about.html
+++ b/ABC-about.html
@@ -38,6 +38,7 @@
             <li>Collaboration</li>
         </ul>
         <h2>About our CEO</h2>
+        <img src="image/ceo.jpg" alt="ceo image" width="200">
         <h3>Jane A. Mitchell</h3>
         <h4>Founder & Chief Executive Officer, ABC Company</h4>
         <p>Jane A. Mitchell founded ABC Company with a simple yet powerful vision: to build solutions that make life easier and businesses smarter.
