--- a/product.html
+++ b/product.html
@@ -12,7 +12,9 @@
             <img src="image/lap.jpg" alt="laptop image" width="200">
             <p>storage of 16GB RAM and 512GD SSD</p>
             <p><strong>Price:$1200.00</strong></p>
-            <a href="laptop-details.html">Veiw details</a><br>
+            <a href="laptop-details.html">Veiw details</a>
+        </p>
+        <p>
             <h3>Wireless Headphone</h3>
             <img src="image/headphone.jpg" alt="black headphone" width="200">
             <p>Built-in mic for clear calls</p>
@@ -20,6 +22,13 @@
             <p><strong>Price: $500</strong></p>
             <a href="headphone-details.html">View details</a>
 
+        </p>
+        <p>
+            <h2>Books</h2>
+            <img src="image/books.jpg" alt="book cover with abstract design" width="200">
+             <p>Thrilling adventure novel, must read!!</p>
+             <p><strong>Price: $50.00</strong></p>
+             <a href="book-details.html">Veiw details</a>
         </p>
         
     </body>
