--- a/product.html
+++ b/product.html
@@ -30,6 +30,7 @@
              <p><strong>Price: $50.00</strong></p>
              <a href="book-details.html">Veiw details</a>
         </p>
+        <a href="home.html">Back to home</a>
         
     </body>
 </html>
